@@ -1,7 +1,7 @@
 /*
     ugens9.c:
 
-    Copyright (C) 1996 Greg Sullivan
+    Copyright (C) 1996 Greg Sullivan, 2004 ma++ ingalls
 
     This file is part of Csound.
 
@@ -23,7 +23,6 @@
 
 #include "cs.h"         /*                                      UGENS9.C        */
 #include <math.h>
-#include "fft.h"
 #include "dsputil.h"
 #include "convolve.h"
 #include "ugens9.h"
@@ -306,5 +305,215 @@ int convolve(CONVOLVE *p)
     p->outcnt = outcnt;
     p->outhead = outhead;
     p->outail = outail;
+    return OK;
+}
+
+
+/* partitioned (low latency) overlap-save convolution.  We break up the
+   IR into separate blocks before doing the FFT.  For this reason we ONLY
+   accept soundfiles as input, and do the FFT at i-time [code cut N pasted
+   from cvanal.c].
+   Eventually it would nice to change cvanal to do the FFT as a preprocess
+	-ma++ april 2004 */
+
+extern int sndinset(SOUNDIN *p);
+extern int soundin(SOUNDIN *p);
+extern SNDFILE *SAsndgetset(char*,SOUNDIN **,MYFLT*,MYFLT*,MYFLT*,int);
+
+int pconvset(PCONVOLVE *p)
+{
+    int      IRfileChanls, channel = *(p->channel);
+    MYFLT    beg_time = FL(0.0), input_dur = FL(0.0), sr = FL(0.0);
+    SNDFILE *infd;
+    SOUNDIN *IRfile;
+    complex *basis;
+    MYFLT   *inbuf, *fp1,*fp2;
+    long    i, read_in, part;
+    MYFLT   *IRblock;
+
+    /* open impulse response soundfile */
+    if ((infd = SAsndgetset(unquote(p->STRARG),&IRfile,&beg_time,
+                            &input_dur,&sr,channel))<0) {
+      sprintf(errmsg, "pconvolve: error while opening %s", retfilnam);
+      return perferror(errmsg);
+    }
+
+    IRfileChanls = IRfile->nchanls;
+ /*   p->nchanls = (channel != ALLCHNLS ? 1 : IRfileChanls); */
+
+    if (sr != esr && (O.msglevel & WARNMSG)) {
+      printf("WARNING: IR srate = %8.0f, orch's srate = %8.0f", sr, esr);
+    }
+
+    /* make sure the partition size is nonzero and a power of 2  */
+    if (*p->partitionSize <= 0)
+      *p->partitionSize = O.outbufsamps;
+
+    p->Hlen = 1;
+    while (p->Hlen < *p->partitionSize)
+      p->Hlen <<= 1;
+
+    p->Hlenpadded = 2*p->Hlen;
+
+
+    /* determine the number of partitions */
+    p->numPartitions = ceil((MYFLT)(IRfile->getframes) / (MYFLT)p->Hlen);
+
+    /* set up FFT tables */
+    basis = AssignBasis(NULL, p->Hlenpadded);  /*##MEMLEAK?? */
+    inbuf = (MYFLT *)mmalloc(p->Hlen /** p->nchanls*/ * sizeof(MYFLT));
+    auxalloc(p->numPartitions * (p->Hlenpadded + 2) *
+             sizeof(MYFLT) /** p->nchanls*/, &p->H);
+    IRblock = (MYFLT *)p->H.auxp;
+
+    /* form each partition and take its FFT */
+    for (part = 0; part < p->numPartitions; part++) {
+      /* get the block of input samples and normalize -- soundin code 
+         handles finding the right channel */
+      if ((read_in = getsndin(infd, inbuf, p->Hlen, IRfile)) <= 0)
+        die(Str(X_965,"less sound than expected!"));
+
+      fp1 = inbuf;
+      fp2 = IRblock;
+      for (i = 0; i < read_in; i++)
+        *fp2++ = *fp1++ * dbfs_to_float;
+
+      FFT2realpacked((complex *)IRblock, p->Hlenpadded , basis);
+
+      /*	 would need to do something like this if multichannel is supported
+
+      if (channel > 1) -- needed? 		 cue up to first sample
+      fp1 += channel - 1; -- needed?
+
+      for (i = 0; i < p->nchanls; i++) {
+      fp2 = IRblock + i * (p->Hlenpadded + 2);
+
+      for (j = p->Hlen; j > 0; j--) {
+      *fp2++ = *fp1 * dbfs_to_float;
+      fp1 += nchanls;
+      }
+
+      fp1 = inbuf + i + 1;
+      FFT2realpacked((complex *)IRblock, p->Hlenpadded , basis);
+      } /* end i loop */
+
+      IRblock += (p->Hlenpadded + 2) /** p->nchanls*/;
+    }
+
+    mfree(inbuf);
+    sf_close(infd);
+
+    /* Initialise input FFT lookup table */
+    p->cvlut = (complex *)AssignBasis(NULL, p->Hlenpadded);  /*##MEMLEAK?? */
+
+    /* allocate the buffer saving recent input samples */
+    auxalloc(p->Hlen * sizeof(MYFLT), &p->savedInput);
+    p->inCount = 0;
+
+    /* allocate the convolution work buffer */
+    auxalloc((p->Hlenpadded+2) * sizeof(MYFLT), &p->workBuf);
+    p->workWrite = (MYFLT *)p->workBuf.auxp + p->Hlen;
+
+    /* allocate the buffer holding recent past convolutions */
+    auxalloc((p->Hlenpadded+2) * p->numPartitions * sizeof(MYFLT), &p->convBuf);
+    p->curPart = 0;
+
+    /* allocate circular output sample buffer */
+    p->outBufSiz = sizeof(MYFLT) * (p->Hlen >= ksmps ? p->Hlenpadded : 2*ksmps);
+    auxalloc(p->outBufSiz, &p->output);
+    p->outWrite = p->outRead = (MYFLT *)p->output.auxp;
+    p->outCount = 0;
+    return OK;
+}
+
+int pconvolve(PCONVOLVE *p)
+{
+    int    nsmpsi = ksmps;
+    MYFLT  *ai = p->ain;
+    MYFLT *buf, *input = p->savedInput.auxp, *workWrite = p->workWrite;
+    MYFLT  *a1 = p->ar1;
+    long hlenp1 = p->Hlen + 1;
+    long   i, count = p->inCount;
+
+    while (nsmpsi-- > 0) {
+      /* Read input audio and place into buffer. */
+      input[count++] = *workWrite++ = *ai++;
+
+      /* We have enough audio for a convolution. */
+      if (count == p->Hlen) {
+        complex *dest = (complex *)((MYFLT *)p->convBuf.auxp +
+                                    p->curPart * (p->Hlenpadded+2) /* * p->nchanls*/);
+        complex *h = (complex *)p->H.auxp;
+        complex *workBuf = (complex *)p->workBuf.auxp;
+
+        /* FFT the input (to create X) */
+        *workWrite = FL(0.0); /* zero out nyquist bin from last fft result -
+                                 maybe is ignored for input(?) but just in case.. */
+        FFT2realpacked(workBuf, p->Hlenpadded, p->cvlut);
+
+        /* for every IR partition convolve and add to previous convolves */
+        for (i = 0; i < p->numPartitions; i++) {
+          complex *src = workBuf;
+          long n = hlenp1;
+          while (n--) {
+            dest->re += (h->re * src->re) - (h->im * src->im);
+            dest->im += (h->im * src->re) + (h->re * src->im);
+            dest++; src++; h++;
+          }
+
+          if (dest == p->convBuf.endp)
+            dest = p->convBuf.auxp;
+        }
+
+        /* Perform inverse FFT of the ondeck partion block */
+        buf = (MYFLT *)p->convBuf.auxp + p->curPart * (p->Hlenpadded+2) /* p->nchanls*/;
+        FFT2torlpacked((complex *)buf, p->Hlenpadded, FL(1.0)/((MYFLT)p->Hlenpadded), p->cvlut);
+
+        /* We only take only the last Hlen output samples so we first zero out
+           the first half for next time, then we copy the rest to output buffer */
+        for (i = 0; i < p->Hlen; i++)
+          *buf++ = FL(0.0);
+        for (i = 0; i < p->Hlen; i++) {
+          *p->outWrite++ = *buf;
+          *buf++ = FL(0.0);
+          if (p->outWrite == p->output.endp)
+            p->outWrite = p->output.auxp;
+        }
+
+        p->outCount += p->Hlen;
+
+        if (++p->curPart == p->numPartitions) /* advance to the next partition */
+          p->curPart = 0;
+
+        /* copy the saved input into the work buffer for next time around */
+        memcpy(p->workBuf.auxp, input, p->Hlen * sizeof(MYFLT));
+
+
+        /* make sure we zero out the extra 2 nyquist vals for next time??? */
+        /*  ((MYFLT *)p->workBuf.auxp)[p->Hlenpadded] = 0; */
+/*           ((MYFLT *)p->workBuf.auxp)[p->Hlenpadded + 1] = 0; /\* technically nyquist->im should always be zero, but just in case.. *\/ */
+
+        count = 0;
+        workWrite = (MYFLT *)p->workBuf.auxp + p->Hlen;
+      }
+
+    } /* end while */
+
+
+    /* copy to output if we have enough samples [we always should
+       except the first Hlen samples] */
+    if (p->outCount >= ksmps) {
+      int n = 0;
+      p->outCount -= ksmps;
+      for (n; n < ksmps; n++) {
+        *a1++ = *p->outRead++;
+        if (p->outRead == p->output.endp)
+          p->outRead = p->output.auxp;
+      }
+    }
+
+    /* update struct */
+    p->inCount = count;
+    p->workWrite = workWrite;
     return OK;
 }
